#完善kpKeyTextBox校验；#完善增改键码验证；#修改keypressListView的imageIndex（图片换成新的）；

--- a/LightController/MyForm/OtherTools/OtherToolsForm.resx
+++ b/LightController/MyForm/OtherTools/OtherToolsForm.resx
@@ -127,8 +127,8 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADk
-        EgAAAk1TRnQBSQFMAgEBAgEAASgBAQEoAQEBKAEAASgBAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAM
+        FAAAAk1TRnQBSQFMAgEBAwEAATABAQEwAQEBKAEAASgBAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABoAMAASgDAAEBAQABCAYAARkYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -172,43 +172,48 @@
         Ae8B8gHzAZIBAQEfASAPRwEgAR8BRQHvAfMBvAGSAfMB9FcAAfQB7wG8AfMBvAFDAQ8BEAFDARQBEwsS
         AhQBEQEPAQ4B6gLyAfcBvAH0BwAB9AHvAbwB8wG8AUQBHwEgEPkCIAEfAeoB8wHyAfcBvAH0VgAB9AHy
         AfcB8AHzAewBAAEOAQ8BEAFDDRUBEQEQAQ8CDgEHAfMBvAH3AfMGAAH0AfIB9wHwAfMB7AEBAR8BIBH5
-        ASABHwEBAe8B8wG8AfcB81YAAfQB8AG8AvIBQwIAAQ4BDwIQCxECEAEPAQ4CAAFtAfMB8AHtAfIB9AUA
-        AfQB8AG8AvIBRAEfASAS+QIgAQEBbQHzAfAB7QHyAfRVAAH0Ae8BBwHzAe8EAAIOAw8GEAQPAg4DAAEQ
-        AfIB8QHvAfAB9AUAAfQB7wEHAfMB7wEBAR8BIBP5ASABHwFEAfIB8QHvAfAB9FUAAfQB9wEHAfMB7QQA
-        Aw4BDwkQAw4EAAEOAQcB8wIHAfQFAAH0AfcBBwHzAe0BAQEfASAT+QEgAR8BAQEHAfMCBwH0VQAB9AHv
-        AQcB8wHsBgABDgoQAQ8BDgYAAfcB8wEHAe8B9AUAAfQB7wEHAfMB7AEBAiAT+QEgAR8BAQH3AfMBBwHv
-        AfRVAAH0Ae8BBwHzAesFAAEOARELQwERAQ4FAAH3AfMBBwHvAfQFAAH0Ae8BBwHzAesBAQIgE/kBIAEf
-        AQEB9wHzAQcB7wH0VQAB9AHvAQcB8wHsBQABEQ0UARAFAAH3AfMBBwHvAfQFAAH0Ae8BBwHzAesBAQIg
-        E/kBIAEfAQEB9wHzAQcB7wH0VQAB9AHvAQcB8wHtBAABDwETDeoBFQEOBAAB7wHzAgcB9AUAAfQB7wEH
-        AfMB7AEBAiAC+Q9HAvkBIAEfAQEB7wHzAgcB9FUAAfQB7wEHAfMB9wQAAUMObQHqARADAAEPAfAB8wK8
-        AfQFAAH0Ae8BBwHzAfcBAQEfASAB+QFHDxcC+QEgAR8BRAHwAfMCvAH0VQAB9AG8AQcB8wHxAQ8DAAEU
-        DuwB6wFDAwAB6gHzAfEB7wHyAfQFAAH0AbwBBwHzAfEBAQEfASAB+QFHD+MBRwIgAQEBEgHzAfEB7wHy
-        AfRVAAH0AfIB7wHxAfMB6wMAARQO7QHsAUMDAAGSAfMBvAGSAfMGAAH0AfIB7wHxAfMB6wEBAiABRw8W
-        AUcBIAEfAQEBkgHzAbwBkgHzVwAB8wH3AbwB8wEHARACAAEUAZIN9wHsAQ8CAAEVAfIB8wG8AQcB9AcA
-        AfMB9wG8AfMBBwEBAR8BIAFHARYNlAHjAiABHwFEAfIB8wG8AQcB9FcAAfQBvAEHAfIB8wHsAQ4BAAEP
-        AewBBwzvAW0CAAEPAZIB8wHyAfcB8gH0BwAB9AG8AQcB8gHzAesBAQEfASABFg2UAeMBIAEfAUQB9wHz
-        AfIB9wHyAfRXAAL0Ae8B8AHzAbwBEwIAAW0BBwu8Ae8BFAEAAQ4B6wHxAfMBvAHvAfQIAAL0Ae8B8AHz
-        AbwBRAEBASAB4wy9AZQBRgEfAQEB7AHxAfMBvAHvAfRZAAH0AfEBkgLyAe8BFQEAARAB9wrxAfABbQEA
-        AQ4BbQG8AvMB7wHzAfQJAAH0AfEBkgLyAe8BRQEBAekBlAu9AW8BHwEBAW4BvALzAe8B8wH0WQAB/wH0
-        AQcB7wHzAfIB7wETAQ4BEAHvCPIB8wHrAg4BbQEHAfMB/wGSAfEB/woAAf8B9AEHAe8B8wHyAe8BRAEB
-        AUUBGgn0AW8B6QEBAW4BvAHzAf8BkgHxAf9bAAH/AfQCBwHzAfIBvAHsARABDwESAfMB/wL0Av8B8AFD
-        AQ4BQwGSAfEB8wH/AfcB8AH0DAAB/wH0AgcB8wHyAbwB6wIBAUUB9AX/ARoB6QEBAUQBkgHxAfMB/wH3
-        AfAB9F4AAf8CBwPzAQcB6wEPAQABEQFtAesB6gEOAQABQwHsAbwC8wH0AfcB8AH/DwAB/wIHA/MBBwHr
-        AR4BAQFFAm8BRQIBAUQB7AG8AvMB9AH3AfAB/2AAAfQBvAHvBPMB8QH3AuwB6wLsAe8B8gPzAfIB7wHw
-        Af8RAAH0AbwB7wTzAfEB9wHsAusC7AHvAfID8wHyAe8B8AH/YQAB/wH0AfEBvALxC/MB8QHwAQcB8gH0
-        Af8RAAH/AfQB8QG8AvEL8wHxAfABBwHyAfQB/2IAAf8C9AHwAbwB8gG8AfAB8gPzAfEBvAHxAfIBBwHx
-        AvQUAAH/AvQB8AG8AfIBvAHwAfID8wHyAbwB8QHyAQcB8QL0ZgAC9AHzAfIB8AG8AfED8gHxAQcB8AHy
-        A/QXAAL0AfMB8gHwAbwB8QLzAfIB8QEHAfAB8gP0agAL9B0AC/T/AP8AQAABQgFNAT4HAAE+AwABKAMA
-        AaADAAEoAwABAQEAAQEFAAEgAQMWAAP/AQAK/woACv8KAAL/AQABfwP/AQABfwH/CgAB/wH4AQABDwL/
-        AfgBAAEPAf8KAAH/AeABAAEDAv8B4AEAAQMB/woAAf8BwAEAAQEC/wHAAQABAQH/CgAB/wGAAgAC/wGA
-        AgAB/woAAf8DAAF/Af8DAAF/CgAB/AMAAT8B/AMAAT8KAAH8AwABHwH8AwABHwoAAfgDAAEPAfgDAAEP
-        CgAB8AMAAQ8B8AMAAQ8KAAHwAwABBwHwAwABBwoAAfADAAEHAfADAAEHCgAB4AMAAQcB4AMAAQcKAAHg
-        AwABAwHgAwABAwoAAeADAAEDAeADAAEDCgAB4AMAAQMB4AMAAQMKAAHgAwABAwHgAwABAwoAAeADAAED
-        AeADAAEDCgAB4AMAAQMB4AMAAQMKAAHgAwABAwHgAwABAwoAAeADAAEDAeADAAEDCgAB4AMAAQMB4AMA
-        AQMKAAHgAwABBwHgAwABBwoAAfADAAEHAfADAAEHCgAB8AMAAQcB8AMAAQcKAAHwAwABDwHwAwABDwoA
-        AfgDAAEPAfgDAAEPCgAB+AMAAR8B+AMAAR8KAAH8AwABPwH8AwABPwoAAf8DAAF/Af8DAAF/CgAB/wGA
-        AgAC/wGAAgAB/woAAf8BgAIAAv8BgAIAAf8KAAH/AcABAAEDAv8BwAEAAQMB/woAAf8B8AEAAQcC/wHw
-        AQABBwH/CgAB/wH+AQABPwL/Af4BAAE/Af8KAAr/CgAK/woACv8KAAs=
+        ASABHwEBAe8B8wG8AfcB8woAG/8xAAH0AfABvALyAUMCAAEOAQ8CEAsRAhABDwEOAgABbQHzAfAB7QHy
+        AfQFAAH0AfABvALyAUQBHwEgEvkCIAEBAW0B8wHwAe0B8gH0BwAC/wEaGeMBlAH0Af8vAAH0Ae8BBwHz
+        Ae8EAAIOAw8GEAQPAg4DAAEQAfIB8QHvAfAB9AUAAfQB7wEHAfMB7wEBAR8BIBP5ASABHwFEAfIB8QHv
+        AfAB9AYAAf8B8wFHAiYYLAImARoB/y4AAfQB9wEHAfMB7QQAAw4BDwkQAw4EAAEOAQcB8wIHAfQFAAH0
+        AfcBBwHzAe0BAQEfASAT+QEgAR8BAQEHAfMCBwH0BgAB/wFHGywBmgFTASYB8y4AAfQB7wEHAfMB7AYA
+        AQ4KEAEPAQ4GAAH3AfMBBwHvAfQFAAH0Ae8BBwHzAewBAQIgE/kBIAEfAQEB9wHzAQcB7wH0BQAB/wEa
+        BCwYMgFTAXoBTQF1Af8tAAH0Ae8BBwHzAesFAAEOARELQwERAQ4FAAH3AfMBBwHvAfQFAAH0Ae8BBwHz
+        AesBAQIgE/kBIAEfAQEB9wHzAQcB7wH0BQAB/wGUAiwcMgFTAU0B/y0AAfQB7wEHAfMB7AUAARENFAEQ
+        BQAB9wHzAQcB7wH0BQAB9AHvAQcB8wHrAQECIBP5ASABHwEBAfcB8wEHAe8B9AUAAf8BdQIsGzICLAFN
+        Af8tAAH0Ae8BBwHzAe0EAAEPARMN6gEVAQ4EAAHvAfMCBwH0BQAB9AHvAQcB8wHsAQECIAL5D0cC+QEg
+        AR8BAQHvAfMCBwH0BQAB/wGUAVMcMgIsAVMB/y0AAfQB7wEHAfMB9wQAAUMObQHqARADAAEPAfAB8wK8
+        AfQFAAH0Ae8BBwHzAfcBAQEfASAB+QFHDxcC+QEgAR8BRAHwAfMCvAH0BQAB/wEaAlMbMgIsAXUB/y0A
+        AfQBvAEHAfMB8QEPAwABFA7sAesBQwMAAeoB8wHxAe8B8gH0BQAB9AG8AQcB8wHxAQEBHwEgAfkBRw/j
+        AUcCIAEBARIB8wHxAe8B8gH0BgAB/wFTARoBUxkyAywB8y4AAfQB8gHvAfEB8wHrAwABFA7tAewBQwMA
+        AZIB8wG8AZIB8wYAAfQB8gHvAfEB8wHrAQECIAFHDxYBRwEgAR8BAQGSAfMBvAGSAfMHAAH/ARsBdQEa
+        AZoaLAEaAf8vAAHzAfcBvAHzAQcBEAIAARQBkg33AewBDwIAARUB8gHzAbwBBwH0BwAB8wH3AbwB8wEH
+        AQEBHwEgAUcBFg2UAeMCIAEfAUQB8gHzAbwBBwH0CAAB/wH0AZoBdRdTAXUBmgHzAf8wAAH0AbwBBwHy
+        AfMB7AEOAQABDwHsAQcM7wFtAgABDwGSAfMB8gH3AfIB9AcAAfQBvAEHAfIB8wHrAQEBHwEgARYNlAHj
+        ASABHwFEAfcB8wHyAfcB8gH0CQAc/zIAAvQB7wHwAfMBvAETAgABbQEHC7wB7wEUAQABDgHrAfEB8wG8
+        Ae8B9AgAAvQB7wHwAfMBvAFEAQEBIAHjDL0BlAFGAR8BAQHsAfEB8wG8Ae8B9FkAAfQB8QGSAvIB7wEV
+        AQABEAH3CvEB8AFtAQABDgFtAbwC8wHvAfMB9AkAAfQB8QGSAvIB7wFFAQEB6QGUC70BbwEfAQEBbgG8
+        AvMB7wHzAfRZAAH/AfQBBwHvAfMB8gHvARMBDgEQAe8I8gHzAesCDgFtAQcB8wH/AZIB8QH/CgAB/wH0
+        AQcB7wHzAfIB7wFEAQEBRQEaCfQBbwHpAQEBbgG8AfMB/wGSAfEB/1sAAf8B9AIHAfMB8gG8AewBEAEP
+        ARIB8wH/AvQC/wHwAUMBDgFDAZIB8QHzAf8B9wHwAfQMAAH/AfQCBwHzAfIBvAHrAgEBRQH0Bf8BGgHp
+        AQEBRAGSAfEB8wH/AfcB8AH0XgAB/wIHA/MBBwHrAQ8BAAERAW0B6wHqAQ4BAAFDAewBvALzAfQB9wHw
+        Af8PAAH/AgcD8wEHAesBHgEBAUUCbwFFAgEBRAHsAbwC8wH0AfcB8AH/YAAB9AG8Ae8E8wHxAfcC7AHr
+        AuwB7wHyA/MB8gHvAfAB/xEAAfQBvAHvBPMB8QH3AewC6wLsAe8B8gPzAfIB7wHwAf9hAAH/AfQB8QG8
+        AvEL8wHxAfABBwHyAfQB/xEAAf8B9AHxAbwC8QvzAfEB8AEHAfIB9AH/YgAB/wL0AfABvAHyAbwB8AHy
+        A/MB8QG8AfEB8gEHAfEC9BQAAf8C9AHwAbwB8gG8AfAB8gPzAfIBvAHxAfIBBwHxAvRmAAL0AfMB8gHw
+        AbwB8QPyAfEBBwHwAfID9BcAAvQB8wHyAfABvAHxAvMB8gHxAQcB8AHyA/RqAAv0HQAL9P8A/wBAAAFC
+        AU0BPgcAAT4DAAEoAwABoAMAASgDAAEBAQABAQUAASABAxYAA/8BAA//BQAP/wUAAv8BAAF/A/8BAAF/
+        Bv8FAAH/AfgBAAEPAv8B+AEAAQ8G/wUAAf8B4AEAAQMC/wHgAQABAwb/BQAB/wHAAQABAQL/AcABAAEB
+        Bv8FAAH/AYACAAL/AYACAAb/BQAB/wMAAX8B/wMAAX8F/wUAAfwDAAE/AfwDAAE/Bf8FAAH8AwABHwH8
+        AwABHwX/BQAB+AMAAQ8B+AMAAQ8F/wUAAfADAAEPAfADAAEPBf8FAAHwAwABBwHwAwABBwX/BQAB8AMA
+        AQcB8AMAAQcF/wUAAeADAAEHAeADAAEHAf4DAAE/BQAB4AMAAQMB4AMAAQMB+AMAAQ8FAAHgAwABAwHg
+        AwABAwHwAwABBwUAAeADAAEDAeADAAEDAfADAAEHBQAB4AMAAQMB4AMAAQMB4AMAAQMFAAHgAwABAwHg
+        AwABAwHgAwABAwUAAeADAAEDAeADAAEDAeADAAEDBQAB4AMAAQMB4AMAAQMB4AMAAQMFAAHgAwABAwHg
+        AwABAwHgAwABAwUAAeADAAEDAeADAAEDAfADAAEHBQAB4AMAAQcB4AMAAQcB8AMAAQcFAAHwAwABBwHw
+        AwABBwH4AwABDwUAAfADAAEHAfADAAEHAfwDAAE/BQAB8AMAAQ8B8AMAAQ8F/wUAAfgDAAEPAfgDAAEP
+        Bf8FAAH4AwABHwH4AwABHwX/BQAB/AMAAT8B/AMAAT8F/wUAAf8DAAF/Af8DAAF/Bf8FAAH/AYACAAL/
+        AYACAAb/BQAB/wGAAgAC/wGAAgAG/wUAAf8BwAEAAQMC/wHAAQABAwb/BQAB/wHwAQABBwL/AfABAAEH
+        Bv8FAAH/Af4BAAE/Av8B/gEAAT8G/wUAD/8FAA//BQAP/wUACw==
 </value>
   </data>
   <metadata name="cfgOpenFileDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -220,14 +225,14 @@
   <metadata name="kpStatusStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>294, 55</value>
   </metadata>
-  <metadata name="lcStatusStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>36, 58</value>
+  <metadata name="kpStatusStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>294, 55</value>
   </metadata>
   <metadata name="lcStatusStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>36, 58</value>
   </metadata>
-  <metadata name="ccStatusStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>166, 55</value>
+  <metadata name="lcStatusStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>36, 58</value>
   </metadata>
   <metadata name="ccStatusStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>166, 55</value>
