--- a/LightController/MyForm/NewMainForm.resx
+++ b/LightController/MyForm/NewMainForm.resx
@@ -131,7 +131,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACW
-        CAAAAk1TRnQBSQFMAgEBDgEAARABAAEQAQABEAEAAQ4BAAT/AQUBAAj/AUIBTQF2BwABdgMAASgDAAFA
+        CAAAAk1TRnQBSQFMAgEBDgEAATABAAEwAQABEAEAAQ4BAAT/AQUBAAj/AUIBTQF2BwABdgMAASgDAAFA
         AwABOAMAAQEBAAEEBgABBxgAAYACAAGAAwACgAEAAYADAAGAAQABgAEAAoACAAPAAQADgAMAAf8CAAH/
         AwAC/wEAAf8DAAH/AQAB/wEAAv8CAAP/AQAI/wEAAv8VAAH/AgAC/wIAAg8C/xUAAf8CAAL/AfABAAEP
         CP8QAAH/AgAC/wHwAQABDwj/EAAB/wEAAQ8C/wHwAQABDwj/EAAB/wEAAv8BDwH/AfABDwEAAv8VAAH/
@@ -170,6 +170,12 @@
         AgABgAFwAfgBAAHxAf8B4AEHAcABAQH4AQAB+QH/AfgBHwHgAQMB+AEACw==
 </value>
   </data>
+  <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>432, 20</value>
+  </metadata>
+  <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>432, 20</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
