+更改LightController的许多Form的位置，路径更为清晰；+编写AddLightAstList()子类部分。

--- a/LightController/MyForm/NewMainForm.resx
+++ b/LightController/MyForm/NewMainForm.resx
@@ -123,65 +123,21 @@
   <metadata name="mainMenuStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>163, 21</value>
   </metadata>
-  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>317, 20</value>
-  </metadata>
-  <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
-    <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
-        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACW
-        CAAAAk1TRnQBSQFMAgEBDgEAAbABAAGwAQABEAEAAQ4BAAT/AQUBAAj/AUIBTQF2BwABdgMAASgDAAFA
-        AwABOAMAAQEBAAEEBgABBxgAAYACAAGAAwACgAEAAYADAAGAAQABgAEAAoACAAPAAQADgAMAAf8CAAH/
-        AwAC/wEAAf8DAAH/AQAB/wEAAv8CAAP/AQAI/wEAAv8VAAH/AgAC/wIAAg8C/xUAAf8CAAL/AfABAAEP
-        CP8QAAH/AgAC/wHwAQABDwj/EAAB/wEAAQ8C/wHwAQABDwj/EAAB/wEAAv8BDwH/AfABDwEAAv8VAAH/
-        AQAB/wIAAQ8B8AEPCP8QAAH/AQAB/wIAAQ8B8AEPCP8QAAH/AQAE/wHwAQ8I/xAAAf8BAAEPA/8BAAEP
-        GAAB/wEAAQ8D/wEAAQ8YAAH/AQ8F/wEPCP8QABD/EAAQ/xIABP8FAAEPAf8B8AIAAf8HAAX/AfACAAEP
-        Bv8B8AMAAQ8C/wIAAf8EAAH/AgAF/wHwAgAD/wIAA/8DAAEPAv8B8AEAAf8B8AMAAf8B8AEABf8B8AIA
-        Af8B8AEPAv8B8AEPAf8EAAP/AQABDwH/AwAC/wEABf8B8AMAAQ8F/wUAAQ8C/wHwAQ8C/wIAAv8B8AX/
-        AfACAAEPD/8BDwz/AfAE/wHwAQ8B/wEACv8BAAz/AfAC/wEPAQAE/wEACf8BAAz/AfABAAH/AQAG/wUA
-        AQ8C/wHwAgAL/wHwAQAJ/wQAAQ8C/wMAAQ8E/wHwBwAJ/wQAAv8B8AYAAv8EAAH/AfACAAH/AQ8G/wHw
-        AwABDwL/AfAGAAL/BAAF/wIABP8B8AUAAv8HAAH/AfAEAAX/AwABDwH/BwABDwHwBwAB/wUABf8BAAEP
-        Af8BAAP/BgAB/wHwAQAI/wEAAQ8F/wIAAv8BAAP/BQABDwH/AfABAAEPB/8BAAH/BAAB/wIAAv8BAAP/
-        AQAI/wkAAf8BDwH/AfAC/wIAAf8B8AEAA/8BAAj/CQAB/wEPAf8B8AL/AQABDwH/AfABDwH/AQAB/wHw
-        BAABDwH/AfABAAEPB/8BAAH/AQ8B/wHwAv8BAAL/AQAB/wHwAQAC/wUAAf8B8AEACP8BAAH/AQ8B/wHw
-        Av8BAAH/AfABDwH/AwAB/wgAAQ8H/wEAAf8BDwH/AfAC/wEAAf8BAAEPAfADAAEPCP8FAAEPAfACAAH/
-        AQ8B/wHwAv8BAAH/AQABDwHwAwABDwj/BAABDwH/AfACAAH/AQ8B/wHwAv8BAAH/AfABDwHwAwABDwgA
-        AQ8H/wEAAf8EAAH/AQAC/wEPAf8DAAH/CAAI/wEPB/8BDwP/AfABAAL/AQ8H/wEPAv8B8AEPC/8BAAb/
-        AfAI/wUAAf8B8AMABP8DAAEPBf8BAAEPB/8FAAEPAfADAAEPAv8B8AkAAQ8CAAEPAncB/wMAAQ8B/wEA
-        A/8BAAb/BAAB/wHwAwAB/wEAAf8BeAGHAXcBhwF/AfABAAL/AQAD/wEABv8EAAH/AfADAAH/AfcBeAF3
-        Av8B9wGHAX8BAAL/AQAD/wEABv8DAAEPAf8B8AIAAv8BeAF3BP8B9wGHAQAB/wHwAQAD/wEACP8BAAL/
-        AfABAAEPA/8B8Ab/AQ8B/wHwAQ8B/wEAAf8B8Aj/AQ8G/wHwAQ8J/wEAAf8B8AEAEf8B8An/AfABDwH/
-        AwAQ/wEAAf8B8AH/AncBfwP/AQABDwHwAwABDwj/AQ8F/wHwAQABDwH3AXgDiAF/AfAB/wEAAQ8B8AMA
-        AQ8I/wEPBf8CAAH3AXgFiAF3Af8B8AEPAfADAAEPBf8B8AL/AQAC/wHwBAABdwaIAYcC/wEPAf8DAAH/
-        BQABDwL/AQABDwH/AfAEAAH/AfcEiAF3Af8BDwP/AfABAAL/AgABDwX/AgAB/wHwBQABDwH3AXgBiAF/
-        AfACAAb/AfACAAEPBf8CAAEPAfAGAAEPAfcBdwHwAwABDwX/AwABDwX/AUIBTQE+BwABPgMAASgDAAFA
-        AwABOAMAAQEBAAEBBQABwAEBFgAD/wMAAcMB/wQAATwBPgGDAf8EAAE8AR4GAAE8AR4GAAE4AR4GAAEw
-        AYYBwwH/BAABMwHmBgABMwHmBgABMAEGBgABOAEOAv8EAAE4AQ4C/wQAASABAhYAAfABDwH+AR8BPwH/
-        AQABHwGAAQEB/gEPAT8BzwEAAR8BAwHAAf4BBwEfAccBAAEfAhgB/wEDAY8BwwEAAR8B4AEDAf8BgQGD
-        AcEBAAEfAYADAAGAAgABEAEGATACAAHAAgABEAGwAQwCAAHAAgABHAHAAQMB/wGBAfACAAEcAgAB/wGD
-        AfgBAQH/AfwCAAH/AQcB/wHDAfwBfAGAAQEB/gEHAf8BwwH8AQAB8AEHAf8BDwH/AccB/AEAAf4BPwH/
-        AZ8B/wHPAfwBAAHjAQMB/wHHAgAB4AEDAcMBAwH/AYcBgAEAAc8B8wHDAQMCAAL/AcgBQwHHAQMCAAL/
-        AcgBQwGGATEB/wGHAYABAAHIAUMBDAFwAf8BxwIAAcgBQwEYAfwC/wGAAQAByAFDATkB/gIAAf8B5wHI
-        AUMBOQH+AgAB/wGHAcgBQwEZAf4C/wGAAQABzwHzAQgB/AL/AgABgAEAAYABcAGAAQABgQGAAgABwAEB
-        AgAB/wHHAfABDwHgAQMBgAEAAf8B5wH4AR8B/wH+AfgBDwHjAQMBAAEPAfEB/AHAAQEBwwEDAQABDwHx
-        AfwCAAHDAQMBAAEPAeEB8AIAAccBAwIAAcEB4AEQAQABhgExAgABgAEBAYABAAEMAXADAAEBAgABGAH8
-        AwABAwEQAQABOQH+AgABgAEHAYABAQE5Af4CAAGAAQ8CAAEZAf4BAAEQAcEB/wIAAQgB/AH/AeAB4QH/
-        AgABgAFwAfgBAAHxAf8B4AEHAcABAQH4AQAB+QH/AfgBHwHgAQMB+AEACw==
-</value>
-  </data>
   <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>432, 20</value>
+    <value>309, 18</value>
+  </metadata>
+  <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>309, 18</value>
   </metadata>
   <metadata name="lightLargeImageList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>553, 20</value>
+    <value>448, 18</value>
   </metadata>
   <data name="lightLargeImageList.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACI
-        xB0AAk1TRnQBSQFMAgEBOwEAAbABCQGwAQkBZAEAAW4BAAT/AREBAAj/AUIBTQE2BwABNgMAASgDAAGQ
+        xB0AAk1TRnQBSQFMAgEBOwEAAUgBAAEIAQABZAEAAW4BAAT/AREBAAj/AUIBTQE2BwABNgMAASgDAAGQ
         AQECAAFyAQYCAAEBAQABEAUAAUABJAEU2QAB/wF/Af8BfwH/AX8B/wF/Af8BfwH/AX8B/wF/Af8BfwH/
         AX8B/wF/Af8BfwH/AX8B/wF/Af8BfwH/AX8B/wF/Af8BfwH/AX8B/wF/Af8BfwH/AX8B/wF/Af8BfwH/
         AX8B/wF/Af8BfwH/AX8B/wF/Af8BfwH/AX8B/wF/Af8BfwH/AX8B/wF/Af8BfwH/AX8B/wF/Af8BfwH/
