--- a/LightController/Properties/Resources.resx
+++ b/LightController/Properties/Resources.resx
@@ -121,8 +121,11 @@
   <data name="在线升级" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\在线升级.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="全局配置" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\全局配置.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="实时调试" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\实时调试.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="浏览效果前" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\浏览效果前.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="统一跳渐变" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\统一跳渐变.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -136,17 +139,14 @@
   <data name="全部归零" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\全部归零.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="统一步时间" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\统一步时间.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Ok3w.Net图标1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Ok3w.Net图标1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="上一步" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\上一步.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="实时调试02" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\实时调试02.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="粘贴步" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\粘贴步.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="打开工程3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\打开工程3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="CSJ中控工具" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\KTV中央控制器.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -169,20 +169,26 @@
   <data name="粘贴灯1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\粘贴灯1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="刷新2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\刷新2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="下一步" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\下一步.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="保持状态1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\保持状态1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="退出程序" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\退出程序.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="结束浏览" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\结束浏览.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Ok3w.Net图标14" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Ok3w.Net图标14.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="灯光图" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\灯光图.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="浏览效果后" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\浏览效果后.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Ok3w.Net图标7" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Ok3w.Net图标7.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="摇麦设置" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\摇麦设置.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -196,14 +202,20 @@
   <data name="灯库编辑" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\灯库编辑.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="保存工程2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\保存工程2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="删除步" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\删除步.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="复制步" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\复制步.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="单灯单步" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\单灯单步.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="新建工程2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\新建工程2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Ok3w.Net图标13" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Ok3w.Net图标13.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="导出25" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\导出25.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -229,11 +241,14 @@
   <data name="使用素材" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\使用素材.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="实时调试" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\实时调试.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="浏览效果后" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\浏览效果后.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="追加步" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\追加步.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Ok3w.Net图标15" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Ok3w.Net图标15.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="刷新1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\刷新.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -241,23 +256,23 @@
   <data name="保存素材2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\保存素材2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="浏览效果前" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\浏览效果前.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="统一步时间" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\统一步时间.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="下一步" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\下一步.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="结束浏览" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\结束浏览.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="保存工程2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\保存工程2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="实时调试02" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\实时调试02.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="打开工程3" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\打开工程3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="全局配置" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\全局配置.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="网络设置" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\网络设置.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="刷新2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\刷新2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="新建工程2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\新建工程2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="统一通道值" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\统一通道值.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -265,8 +280,8 @@
   <data name="保存3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\保存3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="复制步" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\复制步.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="粘贴步" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\粘贴步.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="CSJ灯库工具" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\CSJ灯库工具.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -274,19 +289,7 @@
   <data name="前插入步1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\前插入步1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Ok3w.Net图标1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Ok3w.Net图标1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Ok3w.Net图标7" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Ok3w.Net图标7.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Ok3w.Net图标13" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Ok3w.Net图标13.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Ok3w.Net图标14" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Ok3w.Net图标14.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Ok3w.Net图标15" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Ok3w.Net图标15.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="问号" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\问号1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
